# dsched

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yaml
.sqlx/: query-02c9d4435f519170a82a95d73668bac028ea363b34de3fe000f5a6e0ee391b2a.json  query-0b754aba3d6e41ccf90c6e6a751c7e7c6ec510edcce73eb69c0b26f3e5ed50a4.json  query-1834d73868035a87ffad9db73bab1bb898e8973506090a7dd469881c7d8c0ea9.json  query-189bea194019d23a9d62122ba22ce24df98cf3557793d7cab2e0a1025938d442.json  query-23ae4bc745753854519364634eafb839e9d748011d8d2cab6aa93cbcfd810667.json  query-27d19da9841b7117e7b09050069bcdc5ace6b35473e76e352fc3ee1c60fb96d1.json  query-3557ca2279bb2ee25244503bc4597bca380bab81b4f8b66c97cdfa45c1c11fe0.json  query-35a1a346ea26d6467d9ea97b10321677803cf054f0bca180d0a8c8a400c5d514.json  query-3707b3f39cab664fceebedd40368986e096af2abc0049668c9112ff62ff012ae.json  query-375165a60e7d4af79b3b05afce51f686e5e7ccaa1dc3a640124f1d35bff955fe.json  query-37822f95f18257b4cfff50e5d908d0ba061ffb765742e8650979671ced3ca9b0.json  query-41a4fa9968be9c1bd5334a1194b75543eb1731d8a4f6bcf4429ebb05e3738819.json  query-43a927ece7f1e088466c4b07d3a59610f7f641deb36b833803508e38818647c8.json  query-46949a06be685bb72ba4faf7eb236e6d13f8dcf0d07f0f0e5a9ad5fc365db4d4.json  query-47958cb6d01e341f0a04680ad917dd39ebdd97249cba04cedbff4300dc494ec9.json  query-490a18247d2357439f2708daa0dd19dc9195532049e6aa753be8f7a26c25c9d3.json  query-4ebf0bb076e631dbe155612e427735135a17ceb71cb8fe6212adee6f721fa46c.json  query-56592f7c98845cef83a342a5ea668debdd2aba81052d532bfb3b22f37680c728.json  query-5cbbae33fd76d738d4f0e372f79519526ce81623916d66c254f542e3a23225ff.json  query-66d894f0fee3642b1d1a098a458d92963dc9ed6383a7c36913bad8fd3a49e341.json  query-7195ad06d888152a000c93de6e785d81204c664a4755ab3244f5d6f48520b638.json  query-7d8369d8a0faab808a7e65b1f7c33546b0fee0a30239e440a58e32cdee0edab0.json  query-7ffd3df6e01ebbfdf3ae3efe4edf3e20b13891112cf7e31d541ad7ae6afe748e.json  query-85456771fbb0aa2e38ea874c875850d4ccc7ac9c0dcf392e87bb2a7ba4a78182.json  query-85c7ce55ba4254d3902a4062e7f7916d3f23e1b7c2ceddf9a16889239d051f6c.json  query-8705303bdeeb87bdd706561adbac060682bf3f1fc9cb10304dc73099c058fe4b.json  query-87f9f1390f7b3f20fa0d9c870821536f2f07c75093aeeea87070f8d18cf9c69e.json  query-89c87ce2806ab26c8cc33eb7a061c03f59d2f230728035aae72fd5a17fe55ef2.json  query-89e224415134a66c22b282bc249eab9e204e4a30d814684ccee936da74439e4c.json  query-90ab2cd3d5024e26c61b84a13d3eb7b0c8ea9421417c89886f1945aed92e0eeb.json  query-919fcacc052c0043d49f954313edf8f0ff1a2dc46119836634d08391af8e4891.json  (+10 more)
crates/control-plane/: Cargo.toml  Dockerfile
crates/control-plane/src/: lib.rs  main.rs
crates/control-plane/src/http/: error.rs
crates/control-plane/src/http/handlers/: mod.rs
crates/control-plane/src/http/handlers/cluster/: get.rs  list.rs  mod.rs
crates/control-plane/src/http/handlers/job/: get.rs  list.rs  mod.rs
crates/control-plane/src/http/handlers/job_definition/: create.rs  delete.rs  get.rs  get_by_type.rs  get_enabled.rs  list.rs  mod.rs  toggle_enabled.rs  update.rs  update_schedule.rs
crates/control-plane/src/scheduler/: mod.rs
crates/control-plane/src/storage/: mod.rs
crates/control_plane/: Cargo.toml  Dockerfile
crates/control_plane/.sqlx/: query-764a97e58db0d3b1fea627282d7726c5febed13899f1db8450369d10ad8a0a2d.json
crates/control_plane/migrations/: 0001__create_clusters_table.sql
crates/control_plane/src/: config.rs  lib.rs  main.rs  tracing.rs  util.rs
crates/control_plane/src/cluster/: mod.rs  registry.rs
crates/control_plane/src/cluster/tcp/: mod.rs  session.rs
crates/control_plane/src/http/: mod.rs  state.rs
crates/control_plane/src/http/handlers/: mod.rs
crates/control_plane/src/http/handlers/cluster/: create.rs  get.rs  list.rs  mod.rs
crates/control_plane/src/storage/: driver.rs  mod.rs
crates/control_plane/src/storage/drivers/: mod.rs  postrges.rs
crates/control_plane/src/storage/model/: cluster.rs
crates/master/: Cargo.toml  Dockerfile  cluster.id
crates/master/src/: config.rs  lib.rs  main.rs
crates/master/src/control_plane/: mod.rs  tcp.rs
crates/master/src/identity/: mod.rs
crates/master/src/node/: mod.rs
crates/master/src/node/tcp/: mod.rs  session.rs
crates/shared/: Cargo.toml
crates/shared/migrations/: 0001__create_job_definitions_table.sql  0001__create_jobs_table.sql  0002__create_nodes_table.sql  0003__create_jobs_table.sql  0004__add_jobs_max_retries_column.sql
crates/shared/src/: lib.rs  tracing.rs
crates/shared/src/storage/: driver.rs  mod.rs
crates/shared/src/storage/drivers/: postgres.rs  postrges.rs
crates/shared/src/storage/model/: job.rs  job_definition.rs  mod.rs  node.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  lib.rs
crates/worker/src/executor/: handler.rs  mod.rs
crates/worker/src/lifecycle/: mod.rs
crates/worker/src/storage/: mod.rs
examples/basic-worker/: Cargo.toml  Dockerfile
examples/basic-worker/src/: main.rs
infra/: control-plane-deployment.yaml  (+5 more)
(+4 files in other folders)
