[package]
name = "control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
config = { version = "0.15.22", features = ["toml"] }
dashmap = "6.1.0"
flume = "0.12.0"
futures-util = "0.3.32"
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
rand = "0.10.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
croner = { version = "3.0.1", features = ["serde"] }
