[package]
name = "control_plane"
version = "0.1.0"
edition = "2024"

[dependencies]
cluster_proto = { path = "../cluster_proto" }
shared = { path = "../shared" }

anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
config = { version = "0.15.22", features = ["toml"] }
dashmap = "6.1.0"
flume = "0.12.0"
futures-util = "0.3.32"
rkyv = "0.8.15"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
rand = "0.10.0"
