[package]
name = "master"
version = "0.1.0"
edition = "2024"

[dependencies]
cluster_proto = { path = "../cluster_proto" }
shared = { path = "../shared" }

anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
config = { version = "0.15.22", features = ["toml"] }
tracing = "0.1.44"
rkyv = "0.8.15"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures-util = { version = "0.3.32", features = ["sink"] }
