[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = "1.0.228"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
tracing = "0.1.44"
serde_json = "1.0.149"
