[package]
name = "example-basic-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
worker = { path = "../../crates/worker" }

tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
anyhow = "1.0.102"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
